--- a/views/sidebar.pug
+++ b/views/sidebar.pug
@@ -1,18 +1,18 @@
 mixin sidebarLocationFactory(group, groupName)
     ul.sidebar-group
         li.sidebar-group-title= groupName
-            button(type="button", id=`${groupName}`, onclick=`expandGroup('${groupName}')`).sidebar-action-button
+            button(type="button", id=`${groupName}`, onclick=`expandGroup('${groupName}', 'none')`).sidebar-action-button
                 img.icon(src="./icons/expand-group-icon.svg")
         each location in group || {}
             li.sidebar-location(locationId=`${location.id}`, title=`${location.locationTitle}`, groupName=`${groupName}`)
                 span.sidebar-location-title= location.locationTitle
                 .location-buttons
-                    button.sidebar-action-button(type="button")
-                        img.icon(src="./icons/goto-icon.png")
-                    button.sidebar-action-button(type="button")
-                        img.icon(src="./icons/expand-icon.svg")
-                    button.sidebar-action-button(type="button", data-location-id=`${location.id}` data-location-title=`${location.locationTitle}` data-location-groupName=`${groupName}`)
-                        img.icon(src="./icons/del-icon.png" data-location-id=`${location.id}` data-location-title=`${location.locationTitle}` data-location-groupName=`${groupName}`)
+                    button.sidebar-action-button(type="button" name="goto-btn")
+                        img.icon(src="./icons/goto-icon.png" name="goto-btn")
+                    button.sidebar-action-button(type="button", data-group-name=`${groupName}`, data-loc-id=`${location.locationTitle}` name="edit-btn")
+                        img.icon(src="./icons/expand-icon.svg" data-group-name=`${groupName}`, data-loc-id=`${location.locationTitle}` name="edit-btn")
+                    button.sidebar-action-button(type="button", name="del-btn", data-location-id=`${location.id}` data-location-title=`${location.locationTitle}` data-location-groupName=`${groupName}`)
+                        img.icon(src="./icons/del-icon.png" name="del-btn" data-location-id=`${location.id}` data-location-title=`${location.locationTitle}` data-location-groupName=`${groupName}`)
 
 link(rel='stylesheet', href='./CSS/sidebar.css')
 
@@ -20,3 +20,9 @@ ul#sidebar
     each group, groupName in groups || {}
         +sidebarLocationFactory(group, groupName)
 
+    script.
+        function expandGroup(groupName, id) {
+            fetch(`/expandGroup/${groupName}`).then(() => {
+                window.location.href = `/expandGroup/${groupName}`;
+            });
+        }
