--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,5 +1,5 @@
 
-link(rel='stylesheet', href='./CSS/navbar.css')
+link(rel='stylesheet', href='/CSS/navbar.css')
 
 nav
     span.nav_brand TopraTek
