--- a/public/CSS/group.css
+++ b/public/CSS/group.css
@@ -123,7 +123,26 @@ textarea {
     resize: none;
 }
 
-
 #page-title {
     padding: 30px;
 }
+
+.form-submit-btn {
+    display: flex;
+    justify-content: right;
+}
+
+.form-submit-btn button {
+    width: 100px;
+    height: 30px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: var(--border-radius);
+    cursor: pointer;
+}
+
+.form-submit-btn button:hover {
+    background-color: #45a049;
+}
+
