--- a/views/signup.pug
+++ b/views/signup.pug
@@ -3,6 +3,8 @@ doctype html
 html
     head
         title Sign up
+        link(rel='stylesheet', href='./CSS/main.css')
+        link(rel='stylesheet', href='./CSS/signup.css')
         script(src='https://unpkg.com/htmx.org@1.9.10' integrity='sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC' crossorigin='anonymous')
 
     body
@@ -23,6 +25,3 @@ html
 
         p Already have an account?
         a(href="/login") Login
-
-        div#error-box
-            p errors
