--- a/views/login.pug
+++ b/views/login.pug
@@ -3,6 +3,8 @@ doctype html
 html
     head
         title Log in
+        link(rel='stylesheet', href='./CSS/main.css')
+        link(rel='stylesheet', href='./CSS/login.css')
         script(src='https://unpkg.com/htmx.org@1.9.10' integrity='sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC' crossorigin='anonymous')
     body
         form(action="/login", method="POST", enctype="application/x-www-form-urlencoded")
